[package]
name = "zipf"
version = "6.1.0"
readme = "./README.md"
description = "A fast generator of discrete, bounded Zipf-distributed random numbers"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

license = "Apache-2.0"
keywords = ["random", "distribution", "zipf"]
categories = ["algorithms"]

repository = "https://github.com/jonhoo/rust-zipf"
documentation = "https://docs.rs/zipf"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "zipf", build = "14" }
codecov = { repository = "jonhoo/rust-zipf", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
rand = "0.7.0"
