[package]
name = "zipf"
version = "7.0.0"
readme = "./README.md"
description = "A fast generator of discrete, bounded Zipf-distributed random numbers"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

license = "Apache-2.0"
keywords = ["random", "distribution", "zipf"]
categories = ["algorithms"]

repository = "https://github.com/jonhoo/rust-zipf"
documentation = "https://docs.rs/zipf"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "zipf", build = "14" }
codecov = { repository = "jonhoo/rust-zipf", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
rand = { version = "0.8.0", default-features = false }
num = "0.4"

[dev-dependencies]
rand = "0.8.0"
