[package]
name = "zipf"
version = "7.0.2"
readme = "./README.md"
description = "A fast generator of discrete, bounded Zipf-distributed random numbers"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

license = "Apache-2.0"
keywords = ["random", "distribution", "zipf"]
categories = ["algorithms"]

repository = "https://github.com/jonhoo/rust-zipf"
documentation = "https://docs.rs/zipf"

[dependencies]
rand = { version = "0.8.0", default-features = false }

[dev-dependencies]
rand = "0.8.0"
